# protein_modifier

./: .gitattributes  AGENTS.md  LICENSE  README.md  TODO.txt  pyproject.toml  setup.cfg
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml  ci.yml  codeql.yaml
devtools/: README.md
docs/: Makefile  README.md  api.rst  conf.py  developer_guide.rst  getting_started.rst  index.rst  make.bat  requirements.yaml  user_guide.rst
protein_modifier/: __init__.py  cli.py  modify.py
protein_modifier/backend/: build_idr.py  build_loop.py  data_structures.py  default_parameters.py  find_missing_res.py  io.py  modify_structure.py  parse_build_file.py  protein_math.py  sim_file_generation.py  utils.py
protein_modifier/data/: 6KN8-assembly1-coarse-grained.cif  6KN8-assembly1-with-idr.cif  amino_acids.py  elements.py  example_json.json  lammps_params.py
protein_modifier/tests/: test_protein_modifier.py
